bugs fixed in alignments

--- a/web/app/styles/css/less/home.less
+++ b/web/app/styles/css/less/home.less
@@ -145,6 +145,7 @@
 				width: 100px;
 				margin-right: 10px;
 				padding: 3px;
+				cursor: pointer;
 			}
 			.list-projects{
 				  border-radius: 5px;
