--- a/web/app/styles/css/less/main.less
+++ b/web/app/styles/css/less/main.less
@@ -21,6 +21,7 @@ body{
     margin:0 auto;
     padding:0;
     font-size: 16px;
+    
 }
 
 html,
@@ -116,10 +117,10 @@ p{}
    
   
 @font-face {
-       font-family: 'ProximaNova-Bold';
-        src: url('fonts/ProximaNova-Bold.ttf');
-        src: url('fonts/ProximaNova-Bold.svg') format('svg'),
-             url('fonts/ProximaNova-Bold.woff') format('woff');
+       font-family: 'Roboto';
+        src: url('fonts/Roboto-Regular-webfont.ttf');
+        src: url('fonts/Roboto-Regular-webfont.svg') format('svg'),
+             url('../fonts/ProximaNova-Regular_0.woff') format('woff');
         font-weight: normal;
         font-style: normal;    
 }
@@ -169,6 +170,7 @@ h2{
     padding: 10px 5px;
     font-weight: normal;
     font-family: RobotoSlab-Regular;
+    margin-top: 10px;
 }
 a{  
     font-family: RobotoSlab-Regular; 
@@ -271,6 +273,7 @@ img.login-image {
   bottom: 3px;
   width: 37px;
   height: 36px;
+  top: 352px;
 }
 
 /* ==========================================================================
@@ -386,15 +389,15 @@ div#project-1 {
 
 #left #my-contacts,#left #my-projects,#left #tasks,#left #events{
     /*width: 365px;*/
-    height: 205px;
+    height: 210px;
     background-color: #fff;
     border-radius: 2px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px; 
 }
-#left #my-contacts{
-      overflow-x: hidden;
-}
+// #left #my-contacts{
+//       overflow-x: hidden;
+// }
 
 #left #my-contacts h2{
     padding: 10px 5px 5px 5px;
@@ -418,12 +421,12 @@ div#project-1 {
 }
 
 #left #my-projects h2{
-    border-bottom: 2px solid #eee;
+    border-bottom: 1px solid #DED4D4;
     padding-left: 10px;
     margin-bottom: 0; 
 }
 .project-1,#project-2{
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #DED4D4;
 }
 .project-1 p,#project-2 p,#project-3 p{
     padding:5px 10px; 
@@ -770,6 +773,18 @@ div#project-1 {
     border-bottom:1px solid #eee; 
     margin-right:370px;
 }
+.calender-tasks {
+  position: relative;
+  bottom: 30px;
+  left: 313px;
+}
+.calender-input{
+  position: relative;
+  bottom: 4px;
+}
+.duedate{
+    color: #8b8b8b;
+}
 
 /* class used in javascript */
 
@@ -832,6 +847,7 @@ div#project-1 {
     margin-top: 10px;
     width: 350px;
     height: 34px;
+    cursor: pointer;
   }
  
 .update-btn{
@@ -1551,6 +1567,16 @@ div#project-1 {
     }
 }
 
+ul.clearfix.contacts-li {
+    padding-left: 19px;
+}
+.add-contacts-icon{
+    float: right;
+    width: 21px;
+}
+
+
+
 
 
 
@@ -1875,8 +1901,8 @@ div#project-1 {
 }
 .pro-pic{
     padding:10px 10px;
-    height:100px;
-    width:100px;
+    height:82px;
+    width:83px;
     float:left;
 }
 .pro-pic-small{
